tests/conformance/typecheck/invalid/record_immutable_field_assign.ks
// EXPECT: immutable
val r = { x = 1 }
val _ = { r.x := 2; () }
